# WebFS

./: Cargo.toml  Dockerfile  INSTALLATION.md  README.md
.github/workflows/: deploy.yml
assets/: index.html
assets/bootstrap/css/: bootstrap-breadcrumb.css  bootstrap-dropdown.css
assets/css/: main.css
assets/html/: index.html
assets/js/: index.js
src/: main.rs
src/routes/: cp.rs  ls.rs  mk.rs  mod.rs  mv.rs  rm.rs  shutdown.rs  transfer.rs  types.rs
