[package]
name = "webfs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30" }
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7.12" }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
colored = { version = "2.0.0" }
mime_guess = { version = "2.0.5" }
path-clean = { version = "1.0.1" }
